# sfguide-build-and-deploy-snowpark-ml-models-using-streamlit-snowflake-notebooks

./: .gitignore  README.md  environment.yml  pyproject.toml
SiS Deployment/SiS Deployment/: deploy_app.ipynb  deployment_structure.json
streamlit-automl/: Dockerfile  automl_app.py  callbacks.py  cli.py  code_exporter.py  common.py  entrypoint.sh  environment.yml  histograms.py  ml_modeling.py  ml_ops.py  model_metrics.py  preprocessing.py  requirements.txt  streamlit.yaml  utils.py
streamlit-automl/.streamlit/: config.toml
streamlit-automl/styles/: css_bootstrap.html
streamlit-automl/tests/: test_utils.py
