[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-automl"
description = "Easily build models and engineer features with Streamlit."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.35.0",
    "snowflake-ml-python==1.4.0",
    "numpy==1.26.3",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "xgboost==1.7.3",
    "scikit-learn==1.3.0",
    "black==24.4.2",
    "nbformat==5.10.4",
    "nbconvert==7.16.4"
]

dynamic = ["version"]

[project.scripts]
streamlit-automl = "streamlit_automl.cli:main"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.packages.find]
include = ["streamlit_automl"]

[tool.setuptools.dynamic]
version = { attr = "streamlit_automl.__version__.VERSION" }

[tool.setuptools.package-data]
streamlit_automl = ['resources/*','.streamlit/*','styles/*']

[project.optional-dependencies]
dev = ["jupyter", "pre-commit"]
